--- a/config.ini
+++ b/config.ini
@@ -3,10 +3,9 @@ DB_HOST = localhost
 DB_USER = root
 DB_PASSWORD = 
 DB_NAME = db_trb
-TB_WTM = tb_cekident
+TB_DATA = tb_cekident
 TB_USER = users
 
 
 [device]
 COM_PORT_PRINTER = COM10
-COM_PORT_WTM = COM9
